2005-06-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (DebuggerPaths.cs): Fix for srcdir != builddir.
	($(ADDIN_BUILD)/$(ADDIN)): Likewise.

2005-06-09  Chris Toshok  <toshok@ximian.com>

	* DebuggingService.cs (DebuggingService..ctor): remove the call to
	DebuggerBackend.Initialize().

2005-05-03  Lluis Sanchez Gual  <lluis@novell.com> 

	* Gui/Pads/LocalsPad.cs:
	* Gui/Pads/StackTracePad.cs:
	* Gui/Pads/ThreadPad.cs: Removed BringToFront from IPadContent.

2005-04-30  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggingService.cs: Made Debugging property public and changed the
	name to IsDebugging for consistency with IsRunning. Implemented
	ClearAllBreakpoints method. Don't dispatch events through the
	GUI thread here. It is the responsibility of the subscriber to handle
	the event in the GUI thread, if it needs to.
	When returning the file and line of the execution location, if the
	current stack frame doesn't have debug info return the first one in
	the stack with info.
	* Gui/Pads/StackTracePad.cs: Make sure debugger events run in the GUI
	thread. Show the complete stack trace, something like what mdb does.
	* Makefile.am:
	* MonoDevelopDebugger.addin.xml:
	* DebuggerCommands.cs: Moved debug commands to MonoDevelop.Base.
	* ThreadPad.cs:
	* LocalsPad.cs:Make sure debugger events run in the GUI thread.

2005-04-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/Pads/ThreadPad.cs: Actually remove threads with no target.

2005-04-28  Chris Toshok  <toshok@ximian.com>

	* Gui/Pads/StackTracePad.cs: fix gtk-sharp obsolete warnings.

	* Gui/Pads/LocalsPad.cs: fix gtk-sharp obsolete warnings.
	
	* Gui/Pads/ThreadPad.cs (ThreadPad.AddThread): fix gtk-sharp
	obsolete warnings, and remove the unecessary "new Glib.Value()"
	stuff.

2005-04-28  Chris Toshok  <toshok@ximian.com>

	* DebugAttributeHandler.cs
	(DebugAttributeHandler.ScanDirectory): split out the bulk of
	Rescan and put it here so we can support multiple assembly drop
	points.